--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ gunicorn = "^20.1.0"
 whitenoise = "^6.2.0"
 pytest = "^7.1.2"
 httpx = "^0.23.0"
+waitress = "^2.1.2"
 
 [tool.poetry.dev-dependencies]
 
